force-app/main/default/objects/Salary__c/Salary__c.object-meta.xml
<CustomObject>
    <label>Monthly Payment</label>
    <nameField>
        <displayFormat>MP# {0}-{DD}{MM}{YY}</displayFormat>
        <label>Salary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>