force-app/main/default/objects/Salary__c/fields/Ideal_Payment__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Payment__c</fullName>
    <formula>Monthly_Value__c / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ideal Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>