force-app/main/default/objects/Salary__c/fields/Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Value__c</fullName>
    <formula>2800000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>