force-app/main/default/objects/Salary__c/fields/P_Discount__c.field-meta.xml
<CustomField>
    <fullName>P_Discount__c</fullName>
    <formula>Discount__c / Ideal_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>