force-app/main/default/objects/Salary__c/fields/Received_Value__c.field-meta.xml
<CustomField>
    <fullName>Received_Value__c</fullName>
    <description>Value paid to me by the company</description>
    <label>Received Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>