force-app/main/default/objects/Salary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Received_Value__c</columns>
    <columns>P_Discount__c</columns>
    <columns>Date_Received__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>